Fix gplus renable vibrant (#133)